# shared

./: AGENTS.md  README.md  commandline.py
cmdline/: pyproject.toml
cmdline/src/cmdline/: __init__.py  core.py  output.py  progress.py
cmdline/tests/: test_output.py
mcp/: README.md  pyproject.toml  starter_server.py
mcp/github/: README.md  cursor-snippet.json  env.example  install.sh
mcp/src/ken_mcp/: __init__.py  audit.py  gateway.py  personal_auth.py
templates/: AGENTS.project.md  project.mdc
web/: README.md
web/chat/: agi-chat.css  agi-chat.js  demo.html
