[project]
name = "ken-mcp"
version = "0.1.0"
description = "Shared MCP utilities (OAuth personal auth)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ken_mcp"]
